adding react-router
adding error page

change height and font-size property for mobile

reduce svg size and play opacity

update readme

--- a/src/components/jump_to_btn/jump_to_btn.css
+++ b/src/components/jump_to_btn/jump_to_btn.css
@@ -5,6 +5,12 @@
     align-items: center;
 }
 
+.btn-svg {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+}
+
 
 #arrow1 {
     opacity: 0;
@@ -36,10 +42,12 @@
 
 @keyframes arrow {
     from {
-        transform: translateX(-100px);
+        opacity: 0;
+        transform: translateX(-50px);
     }
 
     to {
+        opacity: 1;
         transform: translateX(0px);
     }
 }
@@ -47,11 +55,18 @@
 @keyframes animation {
     from {
         opacity: 0.0;
-        transform: translateX(-100px);
+        transform: translateY(-100px);
     }
 
     to {
         opacity: 1.0;
-        transform: translateX(0px);
+        transform: translateY(0px);
+    }
+}
+
+
+@media screen and (max-width:600px) {
+    .btn-svg {
+        padding-top: 20px;
     }
 }
