--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,5 +1,5 @@
 .home-article {
-    height: 100vh;
+    height: 100dvh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -42,6 +42,10 @@
 @media screen and (max-width:600px) {
     .home-div {
         flex-direction: column;
+    }
+
+    .home-text {
+        font-size: 10vw;
     }
 
     .text-host {
