--- a/src/components/jump_to_btn/jump_to_btn.css
+++ b/src/components/jump_to_btn/jump_to_btn.css
@@ -12,7 +12,7 @@
 }
 
 
-#arrow1 {
+.arrow1 {
     opacity: 0;
     animation-name: animation, arrow;
     animation-duration: 2s, 2s;
@@ -21,7 +21,7 @@
     animation-iteration-count: 1, infinite;
 }
 
-#arrow2 {
+.arrow2 {
     opacity: 0;
     animation-name: animation, arrow;
     animation-duration: 2s, 2s;
@@ -31,7 +31,7 @@
 }
 
 
-#circle {
+.circle {
     opacity: 0;
     animation-name: animation;
     animation-duration: 2s;
