--- a/src/components/nav_bar/nav_bar.css
+++ b/src/components/nav_bar/nav_bar.css
@@ -22,18 +22,16 @@
 }
 
 .nav-icons {
+    fill: grey;
     width: 30px;
     height: 30px;
-    border-radius: 5px;
     padding: 5px;
-    background-color: white;
     transition: all 300ms ease;
 }
 
 
 .nav-icons:hover {
-    background-color: black;
-    fill: white;
+    fill: black;
 }
 
 
