--- a/src/components/portfolio/responsive/responsive.css
+++ b/src/components/portfolio/responsive/responsive.css
@@ -1,6 +1,6 @@
 .res-container {
     display: flex;
-    padding: 0 max(3vw, 3vh);
+    padding: 0 max(6vw, 3vh);
     flex-direction: column;
 }
 
@@ -8,108 +8,128 @@
     flex: 1;
     display: flex;
     flex-direction: row;
-    gap: 5vw;
+    gap: 1vw;
 }
 
 .res-text {
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: max(3vw, 20px);
+    gap: max(1vw, 10px);
     justify-content: center;
 }
 
-.res-photo {
-    flex: 3;
-    height: 65vh;
-    position: relative;
-}
+
 
 
 .res-btn-container {
-    margin-top: 5vh;
     align-self: flex-end;
+}
+
+
+.res-photo {
+    flex: 2;
+    height: 70vh;
+    width: 100%;
+    position: relative;
 }
 
 .web-photo {
     position: absolute;
     z-index: 1;
-    width: 80%;
+    width: 90%;
     height: auto;
     top: 0;
-    right: 0;
+    right: 0%;
 }
 
 .phone-photo {
     position: absolute;
     z-index: 2;
     width: auto;
-    height: 80%;
+    height: 70%;
     bottom: 0;
-    right: 50%;
+    left: 0;
 }
 
-
-.res-title {
-    font-size: 26pt;
-    font-weight: bold;
-}
-
-.res-body {
+.sec-font {
+    font-family: "Calibri, sans-serif";
+    color: grey;
     font-size: 16pt;
-    font-weight: 600;
 }
 
-@media screen and (max-width: 1068px) {
-    .res-container {
-        height: 80vh;
-    }
+.inside {
+    display: none;
+}
 
-    .res-section {
-        flex-direction: column;
-        gap: 2vw;
-    }
+.res-link {
+    font-size: 36pt;
+    text-decoration: none;
+    color: black;
+}
 
+@media screen and (min-width:800px) and (max-width:1025px) {
     .web-photo {
-        height: 80%;
-        max-width: 80%;
-        width: auto;
+        width: 60%;
+        height: auto;
+        max-height: 90%;
     }
 
     .phone-photo {
-        width: auto;
-        height: 65%;
+        left: unset;
+        right: 55%;
     }
+
 }
 
-@media screen and (max-width:734px) {
+@media screen and (max-width: 1025px) {
     .res-container {
-        height: 80vh;
+        height: 75vh;
+    }
+
+    .sec-font {
+        font-size: 12pt;
     }
 
     .res-text {
         flex: none;
     }
 
-    .res-title {
-        font-size: 20pt;
+    .res-photo {
+        flex: none;
+        height: 50%;
     }
 
-    .res-body {
-        font-size: 14pt;
+    .outside {
+        display: none;
     }
 
+    .inside {
+        display: inline-block;
+    }
 
+    .res-section {
+        flex-direction: column;
+        justify-content: space-around;
+        gap: 2vh;
+    }
+}
+
+
+
+@media screen and (min-height: 1300px) {
+    .res-section {
+        gap: 1vh;
+        justify-content: space-evenly;
+    }
 
     .web-photo {
+        width: 70%;
         height: auto;
-        max-height: 80%;
-        width: 100%;
+        max-height: 90%;
     }
 
     .phone-photo {
-        height: 80%;
-        width: auto;
+        left: 25%;
     }
-
 }
