--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,18 +8,25 @@
     align-items: center;
 }
 
+.home-start,
+.client {
+    transition: 400ms ease-out;
+}
+
+.inactive {
+    opacity: 0;
+}
+
 
 .home-end {
     opacity: 0;
     position: absolute;
-    top: 70vh;
-    transform: translateY(-100px);
+    top: 60vh;
     transition: 500ms ease;
 }
 
 .home-end-show {
     opacity: 1;
-    transform: translateY(0px);
 }
 
 .home-end-wrapper {
@@ -30,11 +37,19 @@
     flex-direction: column;
 }
 
-.home-end-wrapper>p {
-    font-size: clamp(1rem, 1rem + 1vw, 2rem);
+.para-text {
+    font-size: clamp(0.8rem, 0.8rem + 1vw, 2rem);
 }
 
 .home-text {
     text-align: center;
     font-size: max(5vw, 5vh);
+}
+
+.client-wrapper {
+    display: flex;
+    justify-content: center;
+    gap: min(1vw, 1vh);
+    padding: max(7vw, 7vh);
+    flex-direction: column;
 }
