--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,33 +1,20 @@
 .section {
     height: 100vh;
-}
-
-.center {
     display: flex;
     justify-content: center;
     align-items: center;
+    transition: opacity 1500ms;
 }
 
-.home-start,
-.client {
-    transition: 400ms ease-out;
-}
-
-.inactive {
+.hide {
     opacity: 0;
 }
 
 
-.home-end {
-    opacity: 0;
-    position: absolute;
-    top: 60vh;
-    transition: 500ms ease;
-}
-
-.home-end-show {
+.show {
     opacity: 1;
 }
+
 
 .home-end-wrapper {
     display: flex;
