--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ body {
     display: block;
     background-color: white;
     font-family: 'Audrey-Normal', sans-serif;
-
+    scroll-behavior: smooth;
 }
 
 span {
