adding navbar functionality

--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -1,49 +1,17 @@
 .section {
-    height: 90vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     transition: opacity 300ms ease-in;
 }
 
 
-.intro-height {
-    height: 70vh !important;
+.section-height {
+    min-height: 90vh;
 }
 
 
 .hide {
     opacity: 0;
-
 }
 
 .show {
     opacity: 1;
-
-}
-
-.wrapper {
-    display: flex;
-    justify-content: center;
-    padding: max(7vw, 7vh);
-    flex-direction: column;
-}
-
-.home-end-gap {
-    gap: max(1vw, 1vh);
-
-}
-
-.client-gap {
-    gap: min(1vw, 1vh);
-
-}
-
-.para-text {
-    font-size: clamp(0.8rem, 0.8rem + 1vw, 2rem);
-}
-
-.title-text {
-    text-align: center;
-    font-size: max(5vw, 5vh);
 }
