--- a/src/components/nav_bar/nav_bar.css
+++ b/src/components/nav_bar/nav_bar.css
@@ -8,10 +8,11 @@
     align-items: center;
     position: fixed;
     top: 0;
+    z-index: 1000;
 }
 
 .nav-container>span {
-    font-size: 40px;
+    font-size: clamp(1.2rem, 1.2rem + 1vw, 2rem);
 }
 
 .nav-icons-container {
@@ -27,6 +28,34 @@
     height: 30px;
     padding: 5px;
     transition: all 300ms ease;
+}
+
+.menu-wrapper {
+    min-height: 30px;
+    min-width: 30px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    display: none;
+}
+
+.burger {
+    display: block;
+    height: 2px;
+    background-color: black;
+}
+
+.one {
+    min-width: 30px;
+}
+
+.two {
+    min-width: 26px;
+}
+
+.three {
+    min-width: 22px;
 }
 
 
@@ -50,10 +79,16 @@
 
     .nav-icons-container {
         gap: 2px;
+        display: none;
     }
 
+    /* it is in the nav_icons list */
     .nav-icons {
         width: 22px;
         height: 22px;
+    }
+
+    .menu-wrapper {
+        display: inherit;
     }
 }
