refactor burger menu

--- a/src/components/nav_bar/nav_bar.css
+++ b/src/components/nav_bar/nav_bar.css
@@ -31,11 +31,11 @@
 }
 
 .menu-wrapper {
-    min-height: 30px;
-    min-width: 30px;
+    min-height: 20px;
+    min-width: 25px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: flex-end;
     display: none;
 }
@@ -43,20 +43,11 @@
 .burger {
     display: block;
     height: 2px;
+    width: 25px;
     background-color: black;
 }
 
-.one {
-    min-width: 30px;
-}
 
-.two {
-    min-width: 26px;
-}
-
-.three {
-    min-width: 22px;
-}
 
 
 .nav-icons:hover {
