--- a/src/components/nav_bar/popup.css
+++ b/src/components/nav_bar/popup.css
@@ -8,7 +8,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    height: max(50%, 300px);
+    height: max(65%, 500px);
     background-color: white;
     transform: translate(-50%, -50%);
     border-radius: 20px;
@@ -23,6 +23,13 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: grey;
     z-index: 1000;
+}
+
+.nav-icons-wrapper {
+    min-width: min(70%, 400px);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
 }
